Creado PDF amonestación con BBDD y su entidad

--- a/.env
+++ b/.env
@@ -32,3 +32,5 @@ APP_SECRET=50ea49d7678e90b5fb82f8050088a822
 WKHTMLTOPDF_PATH=/usr/local/bin/wkhtmltopdf
 WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage
 ###< knplabs/knp-snappy-bundle ###
+
+DATABASE_URL="mysql://root:edu123@127.0.0.1:3306/maquetas"
