--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "doctrine/doctrine-bundle": "^2.9",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
+        "dompdf/dompdf": "^2.0",
         "knplabs/knp-snappy-bundle": "^1.9",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/console": "5.4.*",
@@ -19,6 +20,7 @@
         "symfony/framework-bundle": "5.4.*",
         "symfony/http-foundation": "5.4.*",
         "symfony/maker-bundle": "^1.48",
+        "symfony/mime": "5.4.*",
         "symfony/monolog-bundle": "^3.8",
         "symfony/runtime": "5.4.*",
         "symfony/serializer": "5.4.*",
@@ -76,5 +78,9 @@
             "allow-contrib": false,
             "require": "5.4.*"
         }
+    },
+    "require-dev": {
+        "symfony/stopwatch": "5.4.*",
+        "symfony/web-profiler-bundle": "5.4.*"
     }
 }
