--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "dompdf/dompdf": "^2.0",
         "knplabs/knp-snappy-bundle": "^1.9",
         "sensio/framework-extra-bundle": "^6.2",
+        "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.17|^2",
