Arreglado fallo nombre Tablas

--- a/.env
+++ b/.env
@@ -33,4 +33,4 @@ WKHTMLTOPDF_PATH=/usr/local/bin/wkhtmltopdf
 WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage
 ###< knplabs/knp-snappy-bundle ###
 
-DATABASE_URL="mysql://root:edu123@127.0.0.1:3306/maquetas"
+DATABASE_URL="mysql://root:edu123@127.0.0.1:3306/maquetas2"
