--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/orm": "^2.14",
         "dompdf/dompdf": "^2.0",
         "knplabs/knp-snappy-bundle": "^1.9",
+        "league/csv": "^9.9",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
